add auto-generated tests for records

--- a/test/fixtures/records.yml
+++ b/test/fixtures/records.yml
@@ -3,11 +3,9 @@
 one:
   cas_user_id: 1
   title: MyString
-  url: MyString
-  metadata_tags: MyString
+  metadata: MyString
 
 two:
   cas_user_id: 1
   title: MyString
-  url: MyString
-  metadata_tags: MyString
+  metadata: MyString
