update test fixtures to include cas_user_name rather than cas_user_id

--- a/test/fixtures/records.yml
+++ b/test/fixtures/records.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
-  cas_user_id: 1
+  cas_user_name: MyString
   title: MyString
   metadata: MyString
 
 two:
-  cas_user_id: 1
+  cas_user_name: MyString
   title: MyString
   metadata: MyString
