--- a/config/database.yml
+++ b/config/database.yml
@@ -7,24 +7,34 @@
 # update: use postgres db
 development:
   adapter: postgresql
-  encoding: unicode
-  # For details on connection pooling, see rails configuration guide
-  # http://guides.rubyonrails.org/configuring.html#database-pooling
+  encoding: utf8
+  database: project_development
   pool: 5
+  username: 
+  password:
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
-test:
+test: &TEST
   adapter: postgresql
-  encoding: unicode
-  # For details on connection pooling, see rails configuration guide
-  # http://guides.rubyonrails.org/configuring.html#database-pooling
+  encoding: utf8
+  database: project_test
   pool: 5
+  username: 
+  password:
 
 production:
   adapter: postgresql
-  encoding: unicode
-  # For details on connection pooling, see rails configuration guide
-  # http://guides.rubyonrails.org/configuring.html#database-pooling
+  encoding: utf8
+  database: project_production
   pool: 5
+  username: 
+  password:
+
+default: &default
+  adapter: postgresql
+  encoding: utf8
+  pool: 5
+  username: 
+  password:
+
+cucumber:
+  <<: *TEST
