quick updates to records_controller_test and adding placeholder files for model and controller tests

--- a/test/fixtures/records.yml
+++ b/test/fixtures/records.yml
@@ -3,9 +3,13 @@
 one:
   cas_user_name: MyString
   title: MyString
-  metadata: MyString
+  description: MyString
+  hashtag: MyString
+  release_checked: true
 
 two:
   cas_user_name: MyString
   title: MyString
-  metadata: MyString
+  description: MyString
+  hashtag: MyString
+  release_checked: true
